trying translate3d again on mobile with webclip fix

--- a/demo/css/main.css
+++ b/demo/css/main.css
@@ -62,6 +62,7 @@ a--no-weight {
 	-ms-flex-align: center;
 	-ms-flex-align: center;
 	-ms-flex-align: center;
+	-ms-flex-align: center;
 	-webkit-flex-wrap: wrap;
 	-ms-flex-wrap: wrap;
 	flex-wrap: wrap;
